ORBvoc.tar.gz: add voc via git-lfs

--- a/config/loop_detector_config.yaml
+++ b/config/loop_detector_config.yaml
@@ -1,6 +1,6 @@
 %YAML:1.0
 ---
-img_dir: /home/ernest/SLAM/datasets/sequence_43/images/
+img_dir: "/home/ernest/SLAM/datasets/raw_rgb/sequence_43/images/"
 trajectory: "/home/ernest/SLAM/datasets/trajectory/trajectory_noloop.yaml"
-Vocabulary: "/home/ernest/SLAM/colab-gsoc2018-JianxiongCai/Vocabulary/ORBvoc.txt"
+Vocabulary: "/home/ernest/SLAM/slam-MapGenerator/Vocabulary/ORBvoc.tar.gz"
 loop_detection_threshold: 0.575
