--- a/src/logging/logging_util.h.in
+++ b/src/logging/logging_util.h.in
@@ -23,13 +23,14 @@
 #define CMAKE_BUILD_TYPE "@CMAKE_BUILD_TYPE@"
 
 #include <iostream>
-#include <boost/log/core.hpp>
-#include <boost/log/trivial.hpp>
-#include <boost/log/expressions.hpp>
+
+#define LOG_INFO  std::cout << "[INFO] "
+
+#define LOG_DEBUG  if (CMAKE_BUILD_TYPE == "Debug") std::cout << "[DEBUG] "
+
+#define LOG_ERROR    std::cerr << "[ERROR] "
 
 void init_logging();
-
-inline void LOG_INFO(const std::string& msg);
 
 
 #endif //SLAM_MAPGEN_LOGGING_UTIL_H
