--- a/playground/CMakeLists.txt
+++ b/playground/CMakeLists.txt
@@ -1,4 +1,7 @@
 # PCL
+
+set(CMAKE_CXX_FLAGS "-std=c++11")
+
 find_package(PCL 1.2 REQUIRED)
 include_directories(${PCL_INCLUDE_DIRS})
 link_directories(${PCL_LIBRARY_DIRS})
@@ -7,5 +10,5 @@ add_definitions(${PCL_DEFINITIONS})
 add_executable(surface_example example.cpp)
 target_link_libraries (surface_example ${PCL_LIBRARIES})
 
-add_executable(reader reader.cpp)
-target_link_libraries (reader ${PCL_LIBRARIES})
+add_executable(reader_sample reader.cpp)
+target_link_libraries (reader_sample ${PCL_LIBRARIES})
