surface_recon: enable poisson reconstruction with PCL
It is not working as well as fast triangulation on DSO output, because poisson assume watertight object

--- a/config/surface_recon_config.yaml
+++ b/config/surface_recon_config.yaml
@@ -1,6 +1,8 @@
 %YAML:1.0
 ---
 img_dir: ""
+use_trajectory: 0
 trajectory: "/home/ernest/SLAM/datasets/trajectory/trajectoryRGBD.yaml"
+pointcloud: "/home/ernest/SLAM/datasets/cloud.pcd"
 Vocabulary: ""
 loop_detection_threshold: 
