--- a/config/surface_recon_config.yaml
+++ b/config/surface_recon_config.yaml
@@ -4,5 +4,7 @@ img_dir: ""
 use_trajectory: 0
 trajectory: "/home/ernest/SLAM/datasets/trajectory/trajectoryRGBD.yaml"
 pointcloud: "/home/ernest/SLAM/datasets/cloud.pcd"
+use_fast_triangulation_recon: 1 
+use_poisson_recon: 0
 Vocabulary: ""
 loop_detection_threshold: 
