dev: almost working in the simplest environment

--- a/config/surface_recon_plane.yaml
+++ b/config/surface_recon_plane.yaml
@@ -15,8 +15,9 @@ SurfaceRecon:
    reconMethod: "PlaneRANSAC"
 
 ReconFastTriangulation:
-   mu: 2.5
-   maximumNearestNeighbors: 100
+   mu: 10
+   maximumNearestNeighbors: 10000
+   searchRadius: 25
 
 PlaneRANSAC:
    minPreserveRatio: 0.25
