--- a/config/surface_recon_plane.yaml
+++ b/config/surface_recon_plane.yaml
@@ -5,7 +5,9 @@ Common:
    trajectory: "/home/ernest/SLAM/datasets/trajectory/trajectoryRGBD.yaml"
    enableLoopClosure: 0
    enableBA: 1
+   enableSurfaceRecon: 0
 # GlobalBA has no local parameters.
+
 LoopClosure:
    Vocabulary: "/home/ernest/SLAM/slam-MapGenerator/Vocabulary/ORBvoc.tar.gz"
    loop_detection_threshold: 0.575
